--- a/src/Info.plist
+++ b/src/Info.plist
@@ -18,6 +18,8 @@
     <string>10.13</string>
     <key>NSHighResolutionCapable</key>
     <true/>
+    <key>NSCalendarsFullAccessUsageDescription</key>
+    <string>Upcoming needs access to your calendar to display today's events in the menu bar.</string>
 </dict>
 </plist>
 
