--- a/src/Info.plist
+++ b/src/Info.plist
@@ -20,6 +20,8 @@
     <true/>
     <key>NSCalendarsFullAccessUsageDescription</key>
     <string>Upcoming needs access to your calendar to display today's events in the menu bar.</string>
+    <key>NSUserNotificationsUsageDescription</key>
+    <string>Upcoming sends notifications to alert you when an event is starting soon.</string>
 </dict>
 </plist>
 
